src/objects/Vend_Sale_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Create_Line_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Vend Integration Process flow will create an Opportunity of record type Membership for the Vend Sale Line Item record.</description>
        <inlineHelpText>If checked, the Vend Integration Process flow will create an Opportunity of record type Membership for the Vend Sale Line Item record.</inlineHelpText>
        <label>Create Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_SKU__c</fullName>
        <label>Project SKU</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Reconciled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Vend record reconciled with any related Salesforce records</description>
        <inlineHelpText>Vend record reconciled with any related Salesforce records</inlineHelpText>
        <label>Record Reconciled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vend_Sale__c</fullName>
        <label>Vend Sale</label>
        <referenceTo>Vend_Sale__c</referenceTo>
        <relationshipLabel>Vend Sale Line Items</relationshipLabel>
        <relationshipName>Vend_Sale_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>Vend Id</label>
        <length>38</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>product_id__c</fullName>
        <label>Vend Product ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sequence__c</fullName>
        <label>sequence</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vend Sale Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SLI-{0000}</displayFormat>
        <label>Vend Sale Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vend Sale Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>